kubernetes/base/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: multicloudx
  labels:
    app.kubernetes.io/part-of: multicloudx
